[gd_scene load_steps=8 format=3 uid="uid://dj047sqo612w0"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_mt7au"]
[ext_resource type="Texture2D" uid="uid://c2tn1hqd63g2v" path="res://Temp Game Assets/Menu/Game Capture.png" id="1_sdprw"]
[ext_resource type="FontFile" uid="uid://c803mn28sir1s" path="res://Temp Game Assets/Menu/Text/GrapeSoda.ttf" id="2_h7kgg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n882m"]
texture = ExtResource("1_sdprw")
modulate_color = Color(0.403922, 0.403922, 0.403922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvlvi"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1ep7"]
bg_color = Color(0.87451, 0.87451, 0.87451, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_blrpu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mt7au")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n882m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -88.5
offset_right = 160.0
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Option")
focus_previous = NodePath("../Exit")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_qvlvi")
theme_override_styles/hover = SubResource("StyleBoxFlat_m1ep7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qvlvi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_blrpu")
text = "Start Game"

[node name="Option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Start")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_qvlvi")
theme_override_styles/hover = SubResource("StyleBoxFlat_m1ep7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qvlvi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_blrpu")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Start")
focus_previous = NodePath("../Option")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_qvlvi")
theme_override_styles/hover = SubResource("StyleBoxFlat_m1ep7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qvlvi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_blrpu")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -355.5
offset_top = 78.0
offset_right = 355.5
offset_bottom = 169.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_h7kgg")
theme_override_font_sizes/font_size = 90
text = "Echoes of Tomorrow"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
